[BST-14] 그룹 삭제 기능 구현 및 그룹 관리 로직 정리 (#54)
* [BST-14] 그룹 삭제 서비스 구현
owner 검증 로직 사용
userGroupRepository의 groupId로 사용자 불러오는 로직 활용
groupUserRepository와 groupRepository 전부 변경하기 때문에 Transactional annotation 사용해서 메서드 전체를 하나 트랜잭션으로 묶음
userGroupRepository에서 한번에 처리하는 로직이 없어 n+1 문제 존재

* [BST-14] feat: controller에 delete 메서드 추가

* [BST-14] docs: swagger yaml 추가
